# argus

./: Cargo.toml  QUICK_REFERENCE.md
src/: main.rs
src/application/: mod.rs
src/application/heartbeat/: mod.rs
src/application/routes/: admin.rs  health_check.rs  mod.rs  partials.rs
src/application/routes/admin/: mod.rs  pages.rs
src/configuration/: mod.rs  service_setup.rs
static/css/: main.css
static/js/: main.js
templates/: _navbar.html  admin.html  base.html  macros.html
templates/pages/: admin.html  home.html  home_partial.html  scanner.html  scanner_partial.html  status.html  status_partial.html
templates/partials/: _breadcrumb.html  _footer.html  _navbar.html  _sidebar.html  body.html  head.html  home.html  layout.html  status.html
