[package]
name = "argus"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
poem = { version = "3.1.12", features = ["static-files"] }
poem-openapi = { version = "5.1.16", features = ["scalar"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.101"
thiserror = "2.0.18"
futures = "0.3.31"
askama = "0.15.4"
askama_web = { version = "0.15.1", features = ["poem-3"] }
chrono = "0.4.23"

[clippy]
[lints.clippy]
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
large_enum_variant = "allow"
